--- a/action.yml
+++ b/action.yml
@@ -18,77 +18,12 @@
 name: 'Cloud Native CI Action'
 description: ''
 inputs:
-  action: # id of input
-    description: 'action'
+  yamlString: # yalm string
+    description: 'all params'
     required: true
-    default: ''
-  test-version: # id of input
-    description: 'test version'
-    required: true
-    default: ''
-  ask-config:  # id of input
-    description: 'ask config'
-    required: true
-    default: ''
-  docker-repo-username: # id of input
-    description: 'docker repo username'
-    required: false
-    default: ''
-  docker-repo-password: # id of input
-    description: 'docker repo password'
-    required: false
-    default: ''
-  chart-git: # id of input
-    description: 'chart git'
-    required: false
-    default: ''
-  chart-branch: # id of input
-    description: 'chart branch'
-    required: false
-    default: ''
-  chart-path: # id of input
-    description: 'chart path'
-    required: false
-    default: './'
-  test-code-git: # id of input
-    description: 'test code git'
-    required: false
-    default: ''
-  test-code-branch: # id of input
-    description: 'test code branch'
-    required: false
-    default: ''
-  test-code-path: # id of input
-    description: 'test code path'
-    required: false
-    default: ''
-  test-cmd: # id of input
-    description: 'test cmd'
-    required: false
-    default: 'mvn -B test'
-  job-id: # id of input
-    description: 'job id'
-    required: true
-    default: ''
-  helm-values: # id of input
-    description: 'helm values'
-    required: true
-    default: ''
+    default: ""
 runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.action }}
-    - ${{ inputs.test-version }}
-    - ${{ inputs.ask-config }}
-    - ${{ inputs.docker-repo-username }}
-    - ${{ inputs.docker-repo-password }}
-    - ${{ inputs.chart-git }}
-    - ${{ inputs.chart-branch }}
-    - ${{ inputs.chart-path }}
-    - ${{ inputs.test-code-git }}
-    - ${{ inputs.test-code-branch }}
-    - ${{ inputs.test-code-path }}
-    - ${{ inputs.test-cmd }}
-    - ${{ inputs.job-id }}
-    - ${{ inputs.helm-values }}
+    - ${{ inputs.yamlString }}
