--- a/benchmark-runner/Dockerfile
+++ b/benchmark-runner/Dockerfile
@@ -1,9 +1,24 @@
-FROM registry.cn-guangzhou.aliyuncs.com/cc-aliyun/ubuntu-python:v1.1.0
+#
+# Licensed to the Apache Software Foundation (ASF) under one or more
+# contributor license agreements.  See the NOTICE file distributed with
+# this work for additional information regarding copyright ownership.
+# The ASF licenses this file to You under the Apache License, Version 2.0
+# (the "License"); you may not use this file except in compliance with
+# the License.  You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# Container image that runs your code
+FROM registry.cn-guangzhou.aliyuncs.com/cc-aliyun/ubuntu-python:v1.2.0
 
-RUN mkdir /benchmark/
 RUN pip install numpy pandas matplotlib
 
-COPY log_analysis.py /benchmark/log_analysis.py
 COPY entry.sh /entry.sh
 
 ENTRYPOINT ["/entry.sh"]
